--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "node-red-contrib-uos-nats",
   "version": "0.1.2",
   "description": "Node-RED nodes for u-OS Data Hub via NATS",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uiff/nats-NodeRed-Node-uc20.git"
+  },
+  "homepage": "https://github.com/uiff/nats-NodeRed-Node-uc20",
+  "bugs": {
+    "url": "https://github.com/uiff/nats-NodeRed-Node-uc20/issues"
+  },
   "license": "MIT",
   "main": "nodes/uos-provider.js",
   "keywords": [
