--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-uos-nats",
-  "version": "0.1.62",
+  "version": "0.1.63",
   "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read and write variables via NATS protocol with OAuth2 authentication. Supports event-based subscriptions and manual variable mapping.",
   "author": {
     "name": "IoTUeli",
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "https://github.com/uiff/nats-NodeRed-Node-uc20.git"
   },
-  "homepage": "https://github.com/uiff/nats-NodeRed-Node-uc20#readme",
+  "homepage": "https://iotueli.ch",
   "bugs": {
     "url": "https://github.com/uiff/nats-NodeRed-Node-uc20/issues"
   },
