--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-uos-nats",
-  "version": "0.1.66",
-  "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read and write variables via NATS protocol with OAuth2 authentication. Supports event-based subscriptions and manual variable mapping.",
+  "version": "0.1.67",
+  "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read, write, and provide variables via NATS protocol with OAuth2 authentication. Supports event-based subscriptions and manual variable mapping.",
   "author": {
     "name": "IoTUeli",
     "url": "https://www.linkedin.com/in/iotueli/"
@@ -31,7 +31,10 @@
     "plc",
     "variables",
     "oauth2",
-    "flatbuffers"
+    "flatbuffers",
+    "write",
+    "read",
+    "provider"
   ],
   "engines": {
     "node": ">=14.0.0"
@@ -46,7 +49,8 @@
     "nodes": {
       "uos-config": "nodes/uos-config.js",
       "datahub-input": "nodes/datahub-input.js",
-      "datahub-output": "nodes/datahub-output.js"
+      "datahub-output": "nodes/datahub-output.js",
+      "datahub-write": "nodes/datahub-write.js"
     }
   }
 }
