--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-uos-nats",
-  "version": "0.1.70",
-  "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read, write, and provide variables via NATS protocol with OAuth2 authentication. Supports event-based subscriptions and manual variable mapping.",
+  "version": "0.2.0",
+  "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read, write, and provide variables via NATS protocol with OAuth2 authentication. Features: Variable Key resolution, custom icons, example flows, and provider definition caching.",
   "author": {
     "name": "IoTUeli",
     "url": "https://www.linkedin.com/in/iotueli/"
@@ -44,6 +44,13 @@
     "nats": "^2.19.0",
     "node-fetch": "^2.6.7"
   },
+  "files": [
+    "nodes/",
+    "lib/",
+    "icons/",
+    "examples/",
+    "README.md"
+  ],
   "node-red": {
     "version": ">=2.0.0",
     "nodes": {
