--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-uos-nats",
-  "version": "0.2.17",
+  "version": "0.2.19",
   "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read, write, and provide variables via NATS protocol with OAuth2 authentication. Features: Variable Key resolution, custom icons, example flows, and provider definition caching.",
   "author": {
     "name": "IoTUeli",
@@ -59,5 +59,8 @@
       "datahub-output": "nodes/datahub-output.js",
       "datahub-write": "nodes/datahub-write.js"
     }
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.3"
   }
 }
