--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-uos-nats",
-  "version": "1.3.68",
+  "version": "1.3.71",
   "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read, write, and provide variables via NATS protocol with OAuth2 authentication. Features: Variable Key resolution, custom icons, example flows, and provider definition caching.",
   "author": {
     "name": "IoTUeli",
@@ -58,6 +58,11 @@
       "datahub-output": "nodes/datahub-output.js",
       "datahub-write": "nodes/datahub-write.js"
     }
+  },
+  "scripts": {
+    "build:offline": "node scripts/build-offline.js",
+    "generate:fbs": "bash scripts/generate-fbs.sh",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "dotenv": "^17.2.3"
