--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-uos-nats",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Node-RED nodes for Weidmüller u-OS Data Hub. Read, write, and provide variables via NATS protocol with OAuth2 authentication. Features: Variable Key resolution, custom icons, example flows, and provider definition caching.",
   "author": {
     "name": "IoTUeli",
@@ -57,7 +57,7 @@
       "datahub-input": "nodes/datahub-input.js",
       "datahub-output": "nodes/datahub-output.js",
       "datahub-write": "nodes/datahub-write.js",
-      "uos-http": "nodes/uos-http.js"
+      "uos-api": "nodes/uos-api.js"
     }
   },
   "scripts": {
